fixed scrolling and footer overlap issues

--- a/style.css
+++ b/style.css
@@ -1,12 +1,15 @@
 html {
   height: 100%;
-  overflow-y: hidden;
 }
 
 body {
   /*font-family: "Montserrat", sans-serif;*/
   background-size: cover;
   height: 100%;
+}
+
+#home, #about, #searchbytype {
+  overflow-y: hidden;
 }
 
 /* Top */
@@ -77,9 +80,8 @@ body {
   border-radius: 5px;
 }
 #submit{
-  font-size: 1.2rem;
+  font-size: 1.5rem;
   border: none;
-  border-radius: 15px;
   outline: none;
   opacity: .90;
 }
@@ -137,9 +139,12 @@ body {
   background-color: #333;
   color: #ffffff;
   bottom: 0;
-  position: fixed;
   width: 100%;
   height: 6%;
+}
+
+.stickyfooter {
+  position: fixed;
 }
 
 #footer .fab:hover,
